--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- Materialize -->
     <link rel="stylesheet" href="./app/assets/css/style.css">
     <link rel="stylesheet" href="./app/assets/css/materialize.min.css">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    
     <title>Document</title>
     <style id='dynamic-styles'></style>
 </head>
